--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="AIzaSyDEjHJePG4sh72hPNG4jENRn162de9mMJU" />
+            android:value="@string/google_maps_api_key" />
     </application>
 
 </manifest>
