--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <!--
      The following two permissions are not required to use
-     Google Maps Android API v2, but are recommended.
+     Google Maps Android API v2, but are recommended.
     -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -53,14 +53,27 @@
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.PlayerActivity"
             android:label="@string/player" >
         </activity>
-
+        <activity
+            android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora"
+            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" />
+        </activity>
+        <activity
+            android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDoraPlay"
+            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora" />
+        </activity>
+        
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_api_key" />
-
     </application>
 
 </manifest>
