--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/OrangeBarTheme" >
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.MainActivity"
             android:label="@string/app_name"
