--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,7 +52,8 @@
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora"
-            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" >
+            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" 
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" />
