--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="gen"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Unity/Editor/Data/PlaybackEngines/androidplayer/development/bin/classes.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
