--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,9 +19,11 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/OrangeBarTheme" >
+        android:theme="@style/OrangeBarTheme" 
+        >
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.MainActivity"
+            android:screenOrientation="landscape" 
             android:label="@string/app_name"
             android:noHistory="true"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
@@ -33,10 +35,12 @@
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane"
+            android:screenOrientation="landscape" 
             android:label="@string/ivrea_map_title" >
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.battle.BattleActivity"
+            android:screenOrientation="landscape" 
             android:label="@string/ivrea_map_button_battle"
             android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" >
             <meta-data
@@ -45,6 +49,7 @@
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.PlayerActivity"
+            android:screenOrientation="landscape" 
             android:label="@string/player" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -52,15 +57,18 @@
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora"
-            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" 
-            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+            android:screenOrientation="landscape" 
+            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane"
+            >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" />
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDoraPlay"
-            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora" >
+            android:screenOrientation="landscape" 
+            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora" 
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora" />
