--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,6 +56,7 @@
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora"
+            android:label="@string/predaindora_title"
             android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
@@ -65,6 +66,7 @@
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDoraPlay"
+            android:label="@string/predaindora_title"
             android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.minigame.PredaInDora"
             android:screenOrientation="landscape"
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
@@ -83,6 +85,7 @@
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.Fagiolata"
+            android:label="@string/fagiolata_title"
             android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.PlaceActivity"
             android:screenOrientation="landscape"
             android:theme="@style/OrangeBarTheme" >
@@ -92,6 +95,7 @@
         </activity>
         <activity
             android:name="it.polito.applicazionimultimediali.carnevalediivrea.minigame.FagiolataPlay"
+            android:label="@string/fagiolata_title"
             android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.minigame.Fagiolata"
             android:screenOrientation="landscape"
             android:theme="@style/OrangeBarTheme" >
@@ -109,7 +113,6 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_api" />
-
     </application>
 
 </manifest>
