score update animation

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -112,6 +112,16 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="it.polito.applicazionimultimediali.carnevalediivrea.minigame.Fagiolata" />
         </activity>
+        <activity
+            android:name="it.polito.applicazionimultimediali.carnevalediivrea.battle.ScoreUpdateActivity"
+            android:label="@string/fagiolata_title"
+            android:parentActivityName="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane"
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="it.polito.applicazionimultimediali.carnevalediivrea.map.MapPane" />
+        </activity>
 
         <meta-data
             android:name="com.google.android.gms.games.APP_ID"
